<?xml version="1.0"?>
<package format="2">
  <name>prioritized_qp_qpswift</name>
  <version>0.0.0</version>
  <description>The prioritized_qp_qpswift package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>prioritized_qp_base</depend>
  <depend>qpswifteigen</depend>

</package>
